--- a/app/views/static_pages/_slider.html.erb
+++ b/app/views/static_pages/_slider.html.erb
@@ -8,16 +8,16 @@
         </div>
         <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:880px;height:235px;overflow:hidden;">
             <div>
-                <img data-u="image" src="/assets/img_title.jpg" />
+                <%= image_tag ("img_title.jpg"), :'data-u' => 'image' %>
             </div>
             <div>
-                <img data-u="image" src="/assets/banhbeo_tc.jpg" />
+                <%= image_tag ("banhbeo_tc.jpg"), :'data-u' => 'image' %>
+              </div>
+            <div>
+                <%= image_tag ("banhmy_tc.jpg"), :'data-u' => 'image' %>
             </div>
             <div>
-                <img data-u="image" src="/assets/banhmy_tc.jpg" />
-            </div>
-            <div>
-                <img data-u="image" src="/assets/coca_tc.jpg" />
+                <%= image_tag ("coca_tc.jpg"), :'data-u' => 'image' %>
             </div>
             <a data-u="any" href="https://www.jssor.com" style="display:none">js slider</a>
         </div>
