--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -59,7 +59,9 @@ display: table-cell;
           <div class="thumbnail">
           <!--<a href="foods/<%=food.id%>"><img src = "<%=food.url%>"></a> -->
           <div class="photo_represent"> 
-            <a href="foods/<%=food.id%>"><img src = "<%=food.url%>"></a> 
+            <!--<a href="foods/<%=food.id%>"><img src = "<%=food.url%>"></a> -->
+
+            <%= link_to image_tag("#{food.url}"), food %>
           </div>
             <div class="caption">
               <h1><strong><%= food.name %></strong></h1>
